# rust-developer-otus

./: .gitignore  Cargo.toml  Makefile  README.md  cargo.toml
.cargo/: config.toml
app/: Cargo.toml
app/src/: device.rs  main.rs
builder/: Cargo.toml
builder/src/: main.rs
command/: Cargo.toml
command/src/: main.rs
examples/: dynamic.rs  net_socket_emulator.rs  run_repo.rs  run_socket_emulator.rs  simple.rs  static.rs  tcp_socket_ui.rs
socket/: Cargo.toml
socket/src/: lib.rs
socket_bin_async/: Cargo.toml
socket_client/: Cargo.toml
socket_client/examples/: socket_client_async.rs
socket_client/src/: lib.rs
socket_lib_async/: Cargo.toml
socket_server/: Cargo.toml
socket_server/src/: main.rs
src/: devices.rs  dynamic_visitor.rs  dynamicv.rs  lib.rs  main.rs  smart_socket.rs  static_visitor.rs  staticv.rs  tcp_server.rs
src/device/: mock.rs  mod.rs  server.rs  tcp_socket_client.rs
src/domain/: client.rs
src/repository/: room.rs
thermo-listener/: Cargo.toml
thermo-listener/src/: main.rs
thermo-sender/: Cargo.toml
thermo-sender/src/: main.rs
thermo_bin_async/: Cargo.toml
thermo_lib_async/: Cargo.toml
thermometer_client/: Cargo.toml
thermometer_client/examples/: thermo_client_async.rs
thermometer_client/src/: lib.rs
thermometer_server/: Cargo.toml
thermometer_server/src/: main.rs
