[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
socket_client = { path = "../socket_client" }
tokio = { version = "1.32.0", features = ["net", "macros", "rt-multi-thread", "io-util", "sync"] }
